fix better text wrapping

--- a/blocks/v2-hero/v2-hero.css
+++ b/blocks/v2-hero/v2-hero.css
@@ -110,6 +110,7 @@
   line-height: 85%;
   letter-spacing: 5px;
   margin-bottom: 8px;
+  text-wrap: balance;
 }
 
 .v2-hero__content p {
